--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -2,10 +2,12 @@
 <html>
   <head>
     <title>Sign In</title>
-    <link rel="stylesheet" type="text/css" href="login.css">
+    {{!-- <link rel="stylesheet" type="text/css" href="../../public/css/style.css"> --}}
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div class="container">
+      
       <h1>Sign In</h1>
       <form>
         <label for="username">Username:</label>
