--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,8 +1,8 @@
 .container {
     margin: 100px auto;
-    width: 300px;
+    width: 330px;
     background-color: #f5f5f5;
-    padding: 20px;
+    padding: 17px;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.3);
   }
@@ -13,14 +13,15 @@
   
   label {
     display: block;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
   }
   
   input[type="text"],
+  input[type="email"],
   input[type="password"] {
-    width: 100%;
+    width: 95%;
     padding: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     border: none;
     border-radius: 3px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
@@ -29,6 +30,7 @@
   .btn {
     display: block;
     width: 100%;
+    
     background-color: #008CBA;
     color: #fff;
     padding: 10px;
