signup dataase done

--- a/templates/views/register.hbs
+++ b/templates/views/register.hbs
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <h1>Sign Up</h1>
-      <form action="/register" method="POST">
+      <form action="/register" method="post">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
 
@@ -26,10 +26,6 @@
         <input type="submit" value="Sign Up" class="btn">
       </form>
     </div>
-    <script type="text/html" src="../../src/register.js">
-      // const __dirname=path.resolve();
-      // const jspath = path.join(__dirname, "./src/models");
-      // import Register form "jspath/register.js"
-    </script>
+    <script type="text/html" src="../../src/models/register.js"></script>
   </body>
 </html>
