--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Sign In</title>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sign In</title>
     <link rel="stylesheet" href="css/login.css">
-  </head>
+</head>
   <body>
     <div class="container">
       
